--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,6 @@ idna==3.6
 inflect==7.0.0
 iniconfig==2.0.0
 Jinja2==3.1.3
-jwt==1.3.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mccabe==0.7.0
@@ -39,6 +38,7 @@ pydantic-sqlalchemy==0.0.9
 pydantic_core==2.16.2
 pyflakes==3.2.0
 Pygments==2.17.2
+PyJWT==2.8.0
 pytest==8.0.0
 pytest-asyncio==0.23.5
 python-dateutil==2.8.2
