--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+AWS_ACCESS_KEY_ID="your_access_key"
+AWS_SECRET_ACCESS_KEY="your_secret_key"
+AWS_SESSION_TOKEN="your_session_token"
 AUTH0_ISSUER="https://dev-1wecvjynzqyw78g0.us.auth0.com/"
 API_IDENTIFIER ="https://dev-1wecvjynzqyw78g0.us.auth0.com/api/v2/"
 POSTGRES_DATABASE_URL="postgresql://your_user:your_password@postgres:5432/your_dbname"
