--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ anyio==4.2.0
 arrow==1.3.0
 binaryornot==0.4.4
 black==24.2.0
+boto3==1.34.46
+botocore==1.34.46
 certifi==2024.2.2
 cffi==1.16.0
 chardet==5.2.0
@@ -21,6 +23,7 @@ idna==3.6
 inflect==7.0.0
 iniconfig==2.0.0
 Jinja2==3.1.3
+jmespath==1.0.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mccabe==0.7.0
@@ -42,10 +45,12 @@ PyJWT==2.8.0
 pytest==8.0.0
 pytest-asyncio==0.23.5
 python-dateutil==2.8.2
+python-multipart==0.0.9
 python-slugify==8.0.4
 PyYAML==6.0.1
 requests==2.31.0
 rich==13.7.0
+s3transfer==0.10.0
 six==1.16.0
 sniffio==1.3.0
 sqlacodegen==2.3.0.post1
@@ -55,5 +60,5 @@ text-unidecode==1.3
 tomli==2.0.1
 types-python-dateutil==2.8.19.20240106
 typing_extensions==4.9.0
-urllib3==2.2.0
+urllib3==2.0.7
 uvicorn==0.27.1
