--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ charset-normalizer==3.3.2
 click==8.1.7
 cookiecutter==2.5.0
 cryptography==42.0.2
+dnspython==2.6.1
+email-validator==2.1.0.post1
 exceptiongroup==1.2.0
 fastapi==0.109.2
 flake8==7.0.0
