--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,9 @@ MarkupSafe==2.1.5
 mccabe==0.7.0
 mdurl==0.1.2
 mypy-extensions==1.0.0
+numpy==1.26.4
 packaging==23.2
+pandas==2.2.1
 pathspec==0.12.1
 platformdirs==4.2.0
 pluggy==1.4.0
@@ -49,6 +51,7 @@ pytest-asyncio==0.23.5
 python-dateutil==2.8.2
 python-multipart==0.0.9
 python-slugify==8.0.4
+pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
 rich==13.7.0
@@ -62,5 +65,6 @@ text-unidecode==1.3
 tomli==2.0.1
 types-python-dateutil==2.8.19.20240106
 typing_extensions==4.9.0
+tzdata==2024.1
 urllib3==2.0.7
 uvicorn==0.27.1
