--- a/requirements.txt
+++ b/requirements.txt
@@ -61,6 +61,7 @@ sniffio==1.3.0
 sqlacodegen==2.3.0.post1
 SQLAlchemy==1.4.51
 starlette==0.36.3
+stripe==8.5.0
 text-unidecode==1.3
 tomli==2.0.1
 types-python-dateutil==2.8.19.20240106
