--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - "5432:5432"
     networks:
       - your_network
-      
+
   flyway:
     image: boxfuse/flyway:latest-alpine
     volumes:
@@ -69,6 +69,27 @@ services:
       - "8080:8080"
     networks:
       - your_network
+
+  stripe-cli:  # Modified service for Stripe CLI
+    image: stripe/stripe-cli
+    environment:
+      - STRIPE_API_KEY=${STRIPE_API_KEY}
+    command: ["listen", "--skip-verify", "--forward-to=cloudkitchen-be_app_1:8000/api/v1/stripe-payment/webhook"]
+    networks:
+      - your_network
+    depends_on:
+      - app
+
+  stripe-cli-trigger:  # Modified service for Stripe CLI
+    image: stripe/stripe-cli
+    environment:
+      - STRIPE_API_KEY=${STRIPE_API_KEY}
+    command: ["trigger", "customer.subscription.deleted"]
+    networks:
+      - your_network
+
+    depends_on:
+      - app
 
 networks:
   your_network:
