--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ pydantic_core==2.16.2
 pyflakes==3.2.0
 Pygments==2.17.2
 PyJWT==2.8.0
+pymongo==4.6.2
 pytest==8.0.0
 pytest-asyncio==0.23.5
 python-dateutil==2.8.2
