--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ numpy==1.26.4
 packaging==23.2
 pandas==2.2.1
 pathspec==0.12.1
+pillow==10.3.0
 platformdirs==4.2.0
 pluggy==1.4.0
 psycopg2-binary==2.9.9
