update github action yml

--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -13,21 +13,29 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-region: ${{ secrets.AWS_REGION}}
 
       - name: Login to AWS ECR
-        uses: aws-actions/amazon-ecr-login@v1
+        uses: aws-actions/amazon-ecr-login@v2
         with:
-          access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          region: us-east-1  # Replace with your AWS region
+          registry-type: private
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.ECR_URI }}/popo24_ecr:${GITHUB_SHA} .
+        run: |
+          docker build -t ${{ secrets.ECR_URI }}:${GITHUB_SHA} .
+          docker tag ${{ secrets.ECR_URI }}:${GITHUB_SHA} ${{ secrets.ECR_URI }}:latest
 
       - name: Push Docker image to ECR
-        run: docker push ${{ secrets.ECR_URI }}/popo24_ecr:${GITHUB_SHA}
+        run: docker push ${{ secrets.ECR_URI }}:${GITHUB_SHA} && docker push ${{ secrets.ECR_URI }}:latest
+
 
   build-only:
     name: Build Docker Image (Other Branches)
@@ -39,4 +47,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.ECR_URI }}/popo24_ecr:${GITHUB_SHA} .
+        run: docker build -t ${{ secrets.ECR_URI }}:${GITHUB_SHA} .
