--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -30,12 +30,11 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.ECR_URI }}:${GITHUB_SHA} .
-          docker tag ${{ secrets.ECR_URI }}:${GITHUB_SHA} ${{ secrets.ECR_URI }}:latest
+          docker build -t popo24_backend:${GITHUB_SHA} .
+          docker tag popo24_backend:${GITHUB_SHA} popo24_backend:latest
 
       - name: Push Docker image to ECR
-        run: docker push ${{ secrets.ECR_URI }}:${GITHUB_SHA} && docker push ${{ secrets.ECR_URI }}:latest
-
+        run: docker push popo24_backend:latest
 
   build-only:
     name: Build Docker Image (Other Branches)
@@ -47,4 +46,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.ECR_URI }}:${GITHUB_SHA} .
+        run: docker build -t popo24_backend:${GITHUB_SHA} .
+
+      - name: Tag Docker image as latest
+        if: always()  # This step should always run
+        run: docker tag popo24_backend:${GITHUB_SHA} popo24_backend:latest
