--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -30,11 +30,11 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.ECR_URI }}:${GITHUB_SHA} .
-          docker tag ${{ secrets.ECR_URI }}:${GITHUB_SHA} ${{ secrets.ECR_URI }}:latest
+          docker build -t popo24_backend:latest .
+          docker tag popo24_backend:latest ${{ secrets.ECR_URI }}:${GITHUB_SHA}
 
       - name: Push Docker image to ECR
-        run: docker push ${{ secrets.ECR_URI }}:${GITHUB_SHA} && docker push popo24_backend:latest
+        run: docker push ${{ secrets.ECR_URI }}:${GITHUB_SHA}}
 
 
   build-only:
