--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -29,12 +29,10 @@ jobs:
           registry-type: private
 
       - name: Build Docker image
-        run: |
-          docker build -t popo24_backend:latest .
-          docker tag popo24_backend:latest ${{ secrets.ECR_URI }}:${GITHUB_SHA}
+        run: docker build -t ${{ secrets.ECR_URI }}:${GITHUB_SHA} .
 
       - name: Push Docker image to ECR
-        run: docker push ${{ secrets.ECR_URI }}:${GITHUB_SHA}}
+        run: docker push ${{ secrets.ECR_URI }}:${GITHUB_SHA}
 
 
   build-only:
