--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.2.0
 arrow==1.3.0
@@ -26,6 +27,7 @@ inflect==7.0.0
 iniconfig==2.0.0
 Jinja2==3.1.3
 jmespath==1.0.1
+Mako==1.3.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mccabe==0.7.0
