--- a/alembic.ini
+++ b/alembic.ini
@@ -59,8 +59,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # the output encoding used when revision files
 # are written from script.py.mako
 # output_encoding = utf-8
-
-sqlalchemy.url = postgresql://your_user:your_password@postgres:5432/popo_24
+sqlalchemy.url = driver://user:pass@localhost/dbname
 
 
 [post_write_hooks]
