--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -29,12 +29,23 @@ jobs:
           registry-type: private
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.ECR_URI }}:popo24_fastapi_server_backend .
+        run: docker build -t ${{ secrets.ECR_URI }}:lastest .
 
       - name: Push Docker image to ECR
-        run: docker push ${{ secrets.ECR_URI }}:popo24_fastapi_server_backend
+        run: docker push ${{ secrets.ECR_URI }}:latest
+
+      - name: Check if image exists in ECR
+        id: check_image_exists
+        run: |
+          image_exists=$(aws ecr describe-images --repository-name ${{ secrets.REMOTE_ECR_REPO_NAME }} --image-ids imageTag=latest --query 'imageDetails[*]' --output json)
+          if [ -n "$image_exists" ]; then
+            echo "::set-output name=image_exists::true"
+          else
+            echo "::set-output name=image_exists::false"
+          fi
 
       - name: Remove Untagged Docker images from ECR
+        if: steps.check_image_exists.outputs.image_exists == 'true'
         run: |
           untagged_images=$(aws ecr list-images --repository-name ${{ secrets.REMOTE_ECR_REPO_NAME }} --filter "tagStatus=UNTAGGED" --query 'imageIds[*]' --output json)
           if [ -n "$untagged_images" ]; then
