--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -37,11 +37,7 @@ jobs:
       
       - name: Update ECS service
         run: |
-          aws ecs update-service --cluster ${CLUSTER_NAME} --service ${SERVICE_NAME} --task-definition ${TASK_DEFINITION}
-        env:
-          CLUSTER_NAME: ${{ secrets.ECS_CLUSTER_NAME }}
-          SERVICE_NAME: ${{ secrets.ECS_SERVICE_NAME }}
-          TASK_DEFINITION: ${{ secrets.ECS_TASK_DEFINITION }}
+          aws ecs update-service --cluster ${{ secrets.ECS_CLUSTER_NAME }} --service ${{ secrets.ECS_SERVICE_NAME }}--task-definition ${{ secrets.ECS_TASK_DEFINITION }}
 
       - name: List images in ECR repository
         id: list_images
