--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -34,16 +34,16 @@ jobs:
       - name: Push Docker image to ECR
         run: docker push ${{ secrets.ECR_URI }}:latest
       
-      
-      - name: Get latest ECS task definition ARN
-        id: get-task-definition
-        run: |
-          latest_task_definition=$(aws ecs describe-services --cluster ${{ secrets.ECS_CLUSTER_NAME }} --services ${{ secrets.ECS_SERVICE_NAME }} --query 'services[0].taskDefinition' --output text)
-          echo "::set-output name=task_definition::$latest_task_definition"
+      # Pause update on ECS, using EC2 for now
+      # - name: Get latest ECS task definition ARN
+      #   id: get-task-definition
+      #   run: |
+      #     latest_task_definition=$(aws ecs describe-services --cluster ${{ secrets.ECS_CLUSTER_NAME }} --services ${{ secrets.ECS_SERVICE_NAME }} --query 'services[0].taskDefinition' --output text)
+      #     echo "::set-output name=task_definition::$latest_task_definition"
 
-      - name: Update ECS service
-        run: |
-          aws ecs update-service --cluster ${{ secrets.ECS_CLUSTER_NAME }} --service ${{ secrets.ECS_SERVICE_NAME }} --task-definition ${{ steps.get-task-definition.outputs.task_definition }}
+      # - name: Update ECS service
+      #   run: |
+      #     aws ecs update-service --cluster ${{ secrets.ECS_CLUSTER_NAME }} --service ${{ secrets.ECS_SERVICE_NAME }} --task-definition ${{ steps.get-task-definition.outputs.task_definition }}
   
       - name: List images in ECR repository
         id: list_images
