--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -16,21 +16,21 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
       
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
+      # - name: Install Docker Compose
+      #   run: |
+      #     sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+      #     sudo chmod +x /usr/local/bin/docker-compose
 
-      - name: Build and start containers with Docker Compose
-        run: |
-          docker-compose up -d
+      # - name: Build and start containers with Docker Compose
+      #   run: |
+      #     docker-compose up -d
 
-      - name: Wait for 10 seconds
-        run: sleep 10
+      # - name: Wait for 10 seconds
+      #   run: sleep 10
 
-      - name: Run Pytest
-        run: |
-          pytest -s tests/
+      # - name: Run Pytest
+      #   run: |
+      #     pytest -s tests/
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
